@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Wrap player state change to a function.
+Nicolas Weeger 2010-08-14
+
 Correctly inform player of lost overall level at death.
 Nicolas Weeger 2010-08-14
 
